--- a/app.yaml
+++ b/app.yaml
@@ -14,7 +14,7 @@
 
 runtime: python
 env: flex
-entrypoint: gunicorn -b :$5000 main:app
+entrypoint: gunicorn -b :8080 main:app
 
 runtime_config:
   python_version: 3
@@ -26,6 +26,6 @@ runtime_config:
 manual_scaling:
   instances: 1
 resources:
-  cpu: 1
-  memory_gb: 0.5
-  disk_size_gb: 10
+  cpu: 2
+  memory_gb: 4
+  disk_size_gb: 70
